assets/css/main.css
@import "tailwindcss";
@plugin "daisyui" {
  exclude: calendar;
  theme-root: ":root";
  prefix: "";
  logs: true;
}

[data-theme="dark"] {
  --primary: 241 244 255;
  --secondary: 255 255 255;
  --accent: 48 229 0;
  --neutral: 0 13 10;
  --base-100: 24 24 24;
  --info: 61 151 255;
  --success: 0 237 148;
  --warning: 217 141 0;
  --error: 255 68 98;
}

[data-theme="light"] {
  --primary: 26 26 26;
  --secondary: 0 0 0;
  --accent: 0 59 255;
  --neutral: 24 29 38;
  --base-100: 255 255 255;
  --info: 4 139 255;
  --success: 44 167 61;
  --warning: 255 114 0;
  --error: 254 0 77;
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

.md-style p {
    padding: 4px 0;
    word-wrap: break-word;
}

.md-style hr {
    margin: 8px 0;
}

.md-style a {
    color: #2f81f7;
}

